Voxel remesh crash #72747

Closed
opened 2019-12-28 12:16:44 +01:00 by kin malmin · 14 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66

Blender Version
Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-12-04 11:32, hash: f1aa4d18d4
Worked: (optional)

Short description of error
the voxel remesh button crash bledner if you set the Voxel Size to 0m

Exact steps for others to reproduce the error

  1. Open blender and go to the Object Data Properties
  2. Go to the Remesh and set Voxel Size to 0m and adaptivity to 1m
  3. Click on the Voxel Remesh button and blender will crash

keep up the great work

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66 **Blender Version** Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-12-04 11:32, hash: `f1aa4d18d4` Worked: (optional) **Short description of error** the voxel remesh button crash bledner if you set the Voxel Size to 0m **Exact steps for others to reproduce the error** 1. Open blender and go to the Object Data Properties 2. Go to the Remesh and set Voxel Size to 0m and adaptivity to 1m 3. Click on the Voxel Remesh button and blender will crash keep up the great work
Author

Added subscriber: @DeadDrag0

Added subscriber: @DeadDrag0
kin malmin changed title from Voxel remehser crash to Voxel remesh crash 2019-12-28 12:17:09 +01:00
Member

Added subscribers: @PabloDobarro, @JacquesLucke

Added subscribers: @PabloDobarro, @JacquesLucke
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can reproduce that.
@PabloDobarro While the voxel size cannot be set to 0, it can be set to 0.00001. Apparently this value is too close to the machine epsilon which causes openvdb to raise an ArithmeticError. I assume you can just increase the min value a bit to avoid that issue.

I can reproduce that. @PabloDobarro While the voxel size cannot be set to 0, it can be set to `0.00001`. Apparently this value is too close to the machine epsilon which causes `openvdb` to raise an `ArithmeticError`. I assume you can just increase the min value a bit to avoid that issue.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Confirmed' to: 'Archived'

Changed status from 'Confirmed' to: 'Archived'
Philipp Oeser self-assigned this 2019-12-28 13:18:18 +01:00
Member

Cannot reproduce an instant crash.

This just goes calculating and eating RAM.
Doing this with on the default cube with a voxel size of 0.001m (1mm) will already end up with a mesh of ~50million tris and eat up ~10GB RAM.
I think it should be expected to reach the limits of most computers if you are doing this with a voxel size of 0.0001m (effective factor 1000 compared to the above)?

So, thanks for the report, but it appears this crashes in the end because Blender ran out of memory.
While we want to improve Blender to handle such cases more gracefully, this is not currently considered a bug.

Cannot reproduce an instant crash. This just goes calculating and eating RAM. Doing this with on the default cube with a voxel size of 0.001m (1mm) will already end up with a mesh of ~50million tris and eat up ~10GB RAM. I think it should be expected to reach the limits of most computers if you are doing this with a voxel size of 0.0001m (effective factor 1000 compared to the above)? So, thanks for the report, but it appears this crashes in the end because Blender ran out of memory. While we want to improve Blender to handle such cases more gracefully, this is not currently considered a bug.
Member

Changed status from 'Archived' to: 'Confirmed'

Changed status from 'Archived' to: 'Confirmed'
Member

Ah, OK, get it now, sorry for the noise...

Ah, OK, get it now, sorry for the noise...
Author

Ok

Ok
Philipp Oeser removed their assignment 2019-12-28 18:03:22 +01:00

This issue was referenced by 6a54969cf1

This issue was referenced by 6a54969cf15e861e13c654c230a35db8e6f377f9
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2019-12-30 16:24:12 +01:00

Added subscriber: @alonelkin

Added subscriber: @alonelkin

Is there a hotfix for that it crashes all the time because i use the Shift+R/Ctrl+R and some times it misses my mouse click and crashes because it thinks i meant to be 0.0001 and i hate it! how can i fix it /the ui? HELP!?

Is there a hotfix for that it crashes all the time because i use the Shift+R/Ctrl+R and some times it misses my mouse click and crashes because it thinks i meant to be 0.0001 and i hate it! how can i fix it /the ui? HELP!?
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72747
No description provided.